# Time-Series-EDA

./: .gitignore  CHANGELOG.rst  HANDOFF.md  LICENSE  MANIFEST.in  PUBLISHING_INSTRUCTIONS.md  README.rst  pyproject.toml
.github/workflows/: ci.yml  docs.yml
data/: README.md
data/sample/: daily_sample.csv  hourly_sample.csv  monthly_sample.csv
docs/: conf.py  contributing.rst  index.rst
docs/_static/css/: custom.css
docs/api/: anomaly.rst  changepoint.rst  core.rst  decomposition.rst  features.rst  forecastability.rst  quality.rst  report.rst  seasonality.rst  statistics.rst  visualization.rst
docs/examples/: index.rst
docs/reports/: index.rst
docs/user_guide/: anomaly.rst  decomposition.rst  features.rst  forecastability.rst  installation.rst  quality.rst  quickstart.rst  reports.rst  seasonality.rst  statistics.rst  timeseries_object.rst  visualization.rst
examples/: 00_load_data.py  01_quality_analysis.py  02_statistics_analysis.py  03_decomposition_analysis.py  04_seasonality_detection.py  05_anomaly_detection.py  06_changepoint_detection.py  08_forecastability.py  README.md  run_all.py
notebooks/: Global_Air_Pollution_EDA.ipynb
notebooks/html/: AQI.html  CO_AQI.html  NO2_AQI.html  Ozone_AQI.html  PM2.5_AQI.html
tests/: conftest.py
tests/test_anomaly/: test_detector.py
tests/test_changepoint/: test_detector.py
tests/test_core/: test_timeseries.py
tests/test_decomposition/: test_classical.py  test_stl.py
tests/test_features/: test_spectral.py  test_statistical.py  test_temporal.py
tests/test_forecastability/: test_leakage.py  test_scorer.py
tests/test_quality/: test_duplicates.py  test_missing.py  test_outliers.py
tests/test_report/: test_console_report.py  test_html_report.py
tests/test_seasonality/: test_detector.py
tests/test_statistics/: test_autocorrelation.py  test_descriptive.py  test_stationarity.py
tests/test_visualization/: test_anomaly_plots.py  test_base.py  test_changepoint_plots.py  test_correlation_plots.py  test_decomposition_plots.py  test_distribution_plots.py  test_quality_plots.py  test_seasonality_plots.py  test_time_plots.py
tseda/: __init__.py
tseda/anomaly/: __init__.py  detector.py
tseda/changepoint/: __init__.py  detector.py
tseda/core/: __init__.py  timeseries.py  types.py  validator.py
tseda/decomposition/: __init__.py  classical.py  stl.py
tseda/features/: __init__.py  spectral.py  statistical.py  temporal.py
tseda/forecastability/: __init__.py  leakage.py  scorer.py
tseda/quality/: __init__.py  duplicates.py  missing.py  outliers.py
tseda/report/: __init__.py  console_report.py  html_report.py
tseda/seasonality/: __init__.py  detector.py
tseda/statistics/: __init__.py  autocorrelation.py  descriptive.py  stationarity.py
tseda/visualization/: __init__.py  anomaly_plots.py  base.py  changepoint_plots.py  correlation_plots.py  decomposition_plots.py  distribution_plots.py  quality_plots.py  seasonality_plots.py  time_plots.py
